tests/ui/coroutine/clone-impl.stderr
error[E0277]: the trait bound `Vec<u32>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`
  --> $DIR/clone-impl.rs:46:5
   |
LL |     let gen_clone_0 = move || {
   |                       ------- within this `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`
...
LL |     check_copy(&gen_clone_0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`, the trait `Copy` is not implemented for `Vec<u32>`, which is required by `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}: Copy`
   |
note: captured value does not implement `Copy`
  --> $DIR/clone-impl.rs:44:14
   |
LL |         drop(clonable_0);
   |              ^^^^^^^^^^ has type `Vec<u32>` which does not implement `Copy`
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:84:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<char>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`
  --> $DIR/clone-impl.rs:46:5
   |
LL |     let gen_clone_0 = move || {
   |                       ------- within this `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`
...
LL |     check_copy(&gen_clone_0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}`, the trait `Copy` is not implemented for `Vec<char>`, which is required by `{coroutine@$DIR/clone-impl.rs:40:23: 40:30}: Copy`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:42:9
   |
LL |         let v = vec!['a'];
   |             - has type `Vec<char>` which does not implement `Copy`
LL |         yield;
   |         ^^^^^ yield occurs here, with `v` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:84:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<u32>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`
  --> $DIR/clone-impl.rs:66:5
   |
LL |     let gen_clone_1 = move || {
   |                       ------- within this `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`
...
LL |     check_copy(&gen_clone_1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`, the trait `Copy` is not implemented for `Vec<u32>`, which is required by `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}: Copy`
   |
note: captured value does not implement `Copy`
  --> $DIR/clone-impl.rs:64:14
   |
LL |         drop(clonable_1);
   |              ^^^^^^^^^^ has type `Vec<u32>` which does not implement `Copy`
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:84:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<char>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`
  --> $DIR/clone-impl.rs:66:5
   |
LL |     let gen_clone_1 = move || {
   |                       ------- within this `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`
...
LL |     check_copy(&gen_clone_1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}`, the trait `Copy` is not implemented for `Vec<char>`, which is required by `{coroutine@$DIR/clone-impl.rs:54:23: 54:30}: Copy`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:60:9
   |
LL |         let v = vec!['a'];
   |             - has type `Vec<char>` which does not implement `Copy`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `v` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:84:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `NonClone: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`
  --> $DIR/clone-impl.rs:78:5
   |
LL |     let gen_non_clone = move || {
   |                         ------- within this `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`
...
LL |     check_copy(&gen_non_clone);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`, the trait `Copy` is not implemented for `NonClone`, which is required by `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}: Copy`
   |
note: captured value does not implement `Copy`
  --> $DIR/clone-impl.rs:76:14
   |
LL |         drop(non_clonable);
   |              ^^^^^^^^^^^^ has type `NonClone` which does not implement `Copy`
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:84:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`
help: consider annotating `NonClone` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct NonClone;
   |

error[E0277]: the trait bound `NonClone: Clone` is not satisfied in `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`
  --> $DIR/clone-impl.rs:80:5
   |
LL |     let gen_non_clone = move || {
   |                         ------- within this `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`
...
LL |     check_clone(&gen_non_clone);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}`, the trait `Clone` is not implemented for `NonClone`, which is required by `{coroutine@$DIR/clone-impl.rs:74:25: 74:32}: Clone`
   |
note: captured value does not implement `Clone`
  --> $DIR/clone-impl.rs:76:14
   |
LL |         drop(non_clonable);
   |              ^^^^^^^^^^^^ has type `NonClone` which does not implement `Clone`
note: required by a bound in `check_clone`
  --> $DIR/clone-impl.rs:85:19
   |
LL | fn check_clone<T: Clone>(_x: &T) {}
   |                   ^^^^^ required by this bound in `check_clone`
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NonClone;
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
